# omnixys-product-service

./: .dockerignore  .editorconfig  .gitignore  .health.env  .markdownlint.yml  .vulture.cfg  404.html  Dockerfile  OBSERVABILITY.md  README.md  deptry.toml  docker-bake.hcl  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-cd.yml  codeql.yml  daily-dependency-check.yml  dependecy-check.yml  docker-weekly.yml  release.yml  security.yml  update-dependency-doc.yml  update-docker-image.yml
er-diagramm/: index.html
exports/: 2025-04-15.csv  2025-04-15.xlsx  2025-04-23.xlsx  2025-05-24.xlsx  2025-05-28.xlsx  2025-05-29.xlsx  2025-06-12.xlsx
komponentendiagramm/: index.html
modules/__init__/: index.html
modules/entity/: index.html
modules/graphql/: index.html
modules/repository/: index.html
modules/rest/: index.html
modules/security/: index.html
modules/service/: index.html
schichtenarchitektur/: index.html
search/: search_index.json
src/product/: __init__.py  __main__.py  asgi_server.py  banner.py  dependency_provider.py  dev_server.py  fastapi_app.py  otel_setup.py
src/product/config/: __init__.py  config.py  dev_modus.py  env.py  excel.py  feature_flags.py  graphql.py  kafka.py  logger.py  mongo.py  server.py  singleton.py  tls.py
src/product/config/dev/: __init__.py  db_populate.py  db_populate_router.py
src/product/config/resources/: app.toml
src/product/error/: exceptions.py
src/product/graphql/: __init__.py  schema.py
src/product/health/: health_env.py  router.py  service.py
src/product/logging/: log_event_dto.py  logger_plus.py
src/product/messaging/: consumer.py  kafka_header_builder.py  kafka_singleton.py  kafka_test_sender.py  producer.py
src/product/messaging/dto/: kafka_message_dto.py  kafka_serializer_mixin.py
src/product/messaging/handlers/: handlers.py
src/product/metrics/: metric_registry.py
src/product/model/entity/: __init__.py  product.py  product_variant.py
src/product/model/enum/: __init__.py  product_category.py
src/product/model/input/: pagination.py  searchcriteria.py
src/product/model/payload/: __init__.py  create_payload.py
src/product/model/types/: product_slice.py
src/product/repository/: __init__.py  healthcheck.py  pageable.py  product_repository.py  session.py  slice.py
src/product/resolver/: product_mutation_resolver.py  product_query_resolver.py
src/product/router/: __init__.py  health_router.py  page.py  shutdown_router.py
src/product/security/: keycloak_service.py
src/product/service/: __init__.py  product_read_service.py  product_write_service.py
src/product/tracing/: decorators.py  trace_context.py  trace_context_middleware.py  trace_context_util.py
use-cases/: index.html
